welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:3: error: value unary_! is not a member of Int
  if (!a==b){if (!c==a){return 1};return 0}
      ^redTicket:3: error: value unary_! is not a member of Int
  if (!a==b){if (!c==a){return 1};return 0}
                 ^