welcome.lessons.welcome.bat.bool2.RedTicket.scala.code
def redTicket(a:Int, b:Int, c:Int):Int = {
  if (a==b && b==c){if (a==2){return 10};return 5}
  if (!a==b){if (!c==a){return 1};return 0}
  return 0}
  